tests/type_errors/hasfield_through_generic.nos
# expect_error: type
# Generic function returns tuple field - type should flow through
getFirst(pair) = pair.0
main() = getFirst(("hello", 42)) + 1
